Sync native RPC binding from rpi1 (real implementation)
Files added/updated tonight:
- sdk/Blake2b256.java
- sdk/Ed25519Signer.java
- sdk/BcsEncoder.java
- sdk/SuiPtbEncoder.java
- sdk/SuiObjectFetcher.java
- sdk/SuiRpcClient.java
- sdk/NativePtbBuilder.java
- das/SuiDasService.java (branch on useNativeRpc flag)
- config/SuiConfig.java (rpcUrl, keystorePath, useNativeRpc)
- ptb/PtbBuilder.java (AccessResult factories made public)
- pom.xml (BouncyCastle embedded)

Benchmark: 1233 ms mean (n=100, testnet)